fluxcd/apps/overlays/production/homelabhelpdesk-site/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homelabhelpdesk-site
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      imagePullSecrets:
        - name: cr-pcfae-admin-pull-secret
      containers:
        - name: homelabhelpdesk-site
          image: cr.pcfae.com/prplanit/homelabhelpdesk.com:v0.0.3
