fluxcd/apps/overlays/production/homelabhelpdesk-site/service-homelabhelpdesk-site-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: homelabhelpdesk-site
  labels:
    policy.prplanit.com/ingress: "true"
