fluxcd/apps/overlays/production/homelabhelpdesk-site/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homelabhelpdesk-site
  namespace: lost-woods
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Discovery & Dashboards (Lost Woods🌲)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "homelabhelpdesk.com"
    - "www.homelabhelpdesk.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: homelabhelpdesk-site
          port: 4018
